--- a/provision/task/go.yml
+++ b/provision/task/go.yml
@@ -21,6 +21,12 @@ tasks:
       - sh: command -v go
         msg: "Please Install Go"
 
+  check:module:
+    desc: Has Module
+    preconditions:
+      - sh: '[ -n "{{.MODULE}}" ]'
+        msg: "Please add var environment module MODULE"
+
   check:gofmt:
     desc: Exist gofmt
     run: once
@@ -91,13 +97,36 @@ tasks:
     deps:
       - task: check:go
 
+  mockery:
+    desc: Refreshes the mock implementations in ./mocks.
+    preconditions:
+      - sh: which mockery
+        msg: mockery is not installed. Please install it using the following command.
+
+          $ go install github.com/vektra/mockery/v2@v2.38.0
+    cmds:
+      - mockery --config .ci/config/mockery.yaml
+
+  generate:
+    desc: "Generate code with Wire"
+    cmds:
+      - go get github.com/google/wire/cmd/wire
+      - wire ./...
+
   test:
     desc: Run go test against code.
-    run: once
-    cmds:
-      - go test -v ./... -coverprofile cover.out -timeout 60m
     deps:
       - task: check:go
+    cmds:
+      - go test -race -v ./... -coverprofile cover.out -timeout 60m
+
+  test:module:
+    desc: Run go test to module against code.
+    deps:
+      - task: check:go
+      - task: check:module
+    cmds:
+      - go test -race -v ./modules/{{ .MODULE }}/... -coverprofile cover.out -timeout 60m
 
   build:
     desc: Build go packages.
