--- a/.chglog/config.yml
+++ b/.chglog/config.yml
@@ -40,7 +40,7 @@ options:
       ci: 👷 CI changes
 
   header:
-    pattern: "^(\\w*)(?:\\(([\\w\\$\\.\\-\\*\\s]*)\\))?\\:\\s(.*)$"
+    pattern: "^(\\w+)(?:\\s*.*)?(?:\\s*\\((.*?)\\))?:\\s*(.*)$"
     pattern_maps:
       - Type
       - Scope
