--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -38,8 +38,8 @@ vars:
   DOCKER_PLATFORM: linux/amd64
   REVIEWERS: luismayta
   PYTHON_VERSION: 3.11.5
-  NODE_VERSION: 18.18.2
-  TERRAFORM_VERSION: 1.8.4
+  NODE_VERSION: v20.18.3
+  TERRAFORM_VERSION: 1.10.5
   GIT_IGNORES: python,node,go,zsh,sonar,java,maven,intellij+all,terraform,linux
   GOLANGCI_VERSION: 1.42.0
   README_FILE: README.md
