docs 📚(core): delete vars unnecessary (#12)
Signed-off-by: Luis Mayta <luis@hadenlabs.com>

--- a/provision/generators/README.yaml
+++ b/provision/generators/README.yaml
@@ -45,6 +45,10 @@ badges:
 
 requirements: |-
 
+  This is a list of var environment requireds:
+
+    - `TASK_X_REMOTE_TASKFILES=1`: Enabled Tasks Remote
+
   This is a list of plugins that need to be installed previously to enjoy all the goodies of this configuration:
 
   - [gomplate](https://github.com/hairyhenderson/gomplate)
